--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,6 +24,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
+		{% include 'MainCSJS.html' %}
 	</head>
     <body>		
 		<div id="top-bar" class="container">
