--- a/templates/cart.html
+++ b/templates/cart.html
@@ -24,6 +24,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="themes/js/respond.min.js"></script>
 		<![endif]-->
+		{% include 'MainCSJS.html' %}
 	</head>
     <body>		
 		<div id="top-bar" class="container">
@@ -37,9 +38,9 @@
 					<div class="account pull-right">
 						<ul class="user-menu">				
 							<li><a href="#">My Account</a></li>
-							<li><a href="cart.html">Your Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>					
-							<li><a href="register.html">Login</a></li>			
+							<li><a href="cart">Your Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>					
+							<li><a href="register">Login</a></li>			
 						</ul>
 					</div>
 				</div>
@@ -48,7 +49,7 @@
 		<div id="wrapper" class="container">
 			<section class="navbar main-menu">
 				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
+					<a href="/" class="logo pull-left"><img src="../static/themes/images/logo.png" class="site_logo" alt=""></a>
 					<nav id="menu" class="pull-right">
 						<ul>
 							<li><a href="./products.html">Woman</a>					
@@ -74,7 +75,7 @@
 				</div>
 			</section>				
 			<section class="header_text sub">
-			<img class="pageBanner" src="themes/images/pageBanner.png" alt="New products" >
+			<img class="pageBanner" src="../static/themes/images/pageBanner.png" alt="New products" >
 				<h4><span>Shopping Cart</span></h4>
 			</section>
 			<section class="main-content">				
@@ -95,7 +96,7 @@
 							<tbody>
 								<tr>
 									<td><input type="checkbox" value="option1"></td>
-									<td><a href="product_detail.html"><img alt="" src="themes/images/ladies/9.jpg"></a></td>
+									<td><a href="product_detail.html"><img alt="" src="../static/themes/images/ladies/9.jpg"></a></td>
 									<td>Fusce id molestie massa</td>
 									<td><input type="text" placeholder="1" class="input-mini"></td>
 									<td>$2,350.00</td>
@@ -103,7 +104,7 @@
 								</tr>			  
 								<tr>
 									<td><input type="checkbox" value="option1"></td>
-									<td><a href="product_detail.html"><img alt="" src="themes/images/ladies/1.jpg"></a></td>
+									<td><a href="product_detail.html"><img alt="" src="../static/themes/images/ladies/1.jpg"></a></td>
 									<td>Luctus quam ultrices rutrum</td>
 									<td><input type="text" placeholder="2" class="input-mini"></td>
 									<td>$1,150.00</td>
@@ -111,7 +112,7 @@
 								</tr>
 								<tr>
 									<td><input type="checkbox" value="option1"></td>
-									<td><a href="product_detail.html"><img alt="" src="themes/images/ladies/3.jpg"></a></td>
+									<td><a href="product_detail.html"><img alt="" src="../static/themes/images/ladies/3.jpg"></a></td>
 									<td>Wuam ultrices rutrum</td>
 									<td><input type="text" placeholder="1" class="input-mini"></td>
 									<td>$1,210.00</td>
@@ -185,7 +186,7 @@
 											<li class="span3">
 												<div class="product-box">
 													<span class="sale_tag"></span>												
-													<a href="product_detail.html"><img alt="" src="themes/images/ladies/2.jpg"></a><br/>
+													<a href="product_detail.html"><img alt="" src="../static/themes/images/ladies/2.jpg"></a><br/>
 													<a href="product_detail.html" class="title">Fusce id molestie massa</a><br/>
 													<a href="#" class="category">Suspendisse aliquet</a>
 													<p class="price">$261</p>
@@ -197,7 +198,7 @@
 										<ul class="thumbnails listing-products">
 											<li class="span3">
 												<div class="product-box">												
-													<a href="product_detail.html"><img alt="" src="themes/images/ladies/4.jpg"></a><br/>
+													<a href="product_detail.html"><img alt="" src="../static/themes/images/ladies/4.jpg"></a><br/>
 													<a href="product_detail.html" class="title">Tempor sem sodales</a><br/>
 													<a href="#" class="category">Urna nec lectus mollis</a>
 													<p class="price">$134</p>
@@ -233,7 +234,7 @@
 						</ul>
 					</div>
 					<div class="span5">
-						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
+						<p class="logo"><img src="../static/themes/images/logo.png" class="site_logo" alt=""></p>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
 						<br/>
 						<span class="social_icons">
