--- a/templates/register.html
+++ b/templates/register.html
@@ -24,6 +24,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 			<script src="js/respond.min.js"></script>
 		<![endif]-->
+		{% include 'MainCSJS.html' %}
 	</head>
     <body>		
 		<div id="top-bar" class="container">
@@ -37,9 +38,9 @@
 					<div class="account pull-right">
 						<ul class="user-menu">				
 							<li><a href="#">My Account</a></li>
-							<li><a href="cart.html">Your Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>					
-							<li><a href="register.html">Login</a></li>		
+							<li><a href="cart">Your Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>					
+							<li><a href="register">Login</a></li>		
 						</ul>
 					</div>
 				</div>
@@ -48,7 +49,7 @@
 		<div id="wrapper" class="container">
 			<section class="navbar main-menu">
 				<div class="navbar-inner main-menu">				
-					<a href="index.html" class="logo pull-left"><img src="themes/images//logo.png" class="site_logo" alt=""></a>
+					<a href="/" class="logo pull-left"><img src="../static/themes/images//logo.png" class="site_logo" alt=""></a>
 					<nav id="menu" class="pull-right">
 						<ul>
 							<li><a href="./products.html">Woman</a>					
@@ -74,7 +75,7 @@
 				</div>
 			</section>			
 			<section class="header_text sub">
-			<img class="pageBanner" src="themes/images/pageBanner.png" alt="New products" >
+			<img class="pageBanner" src="../static/themes/images/pageBanner.png" alt="New products" >
 				<h4><span>Login or Regsiter</span></h4>
 			</section>			
 			<section class="main-content">				
@@ -158,7 +159,7 @@
 						</ul>
 					</div>
 					<div class="span5">
-						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
+						<p class="logo"><img src="../static/themes/images/logo.png" class="site_logo" alt=""></p>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
 						<br/>
 						<span class="social_icons">
