--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -76,25 +76,83 @@
 			</section>			
 			<section class="header_text sub">
 			<img class="pageBanner" src="../static/themes/images/pageBanner.png" alt="New products" >
-				<h4><span>Login or Regsiter</span></h4>
+				<h4><span>My Account</span></h4>
 			</section>			
 			<section class="main-content">				
 				<div class="row">
-					<div class="span5">					
-						<h4 class="title"><span class="text"><strong>Login</strong> Form</span></h4>
-						<form action="#" method="post">
+					<div class="span12"> <!-- span 7-->
+                        <!-- Left account -->					
+						<h4 class="title"><span class="text"><strong>Information</strong> Form</span></h4>
+						<form action="#" method="post" align="center">
 							<input type="hidden" name="next" value="/">
 							<fieldset>
 								<div class="control-group">
-									<label class="control-label">Username</label>
+									<!--  Username -->
 									<div class="controls">
-										<input type="text" placeholder="Enter your username" id="username" class="input-xlarge">
+										<label class="control-label"><h4>Username : 
+                                        <input type="text" id="username" name="username" value="user123" readonly></h4></label>
+                                        <!--<input type="text" placeholder="Enter your username" id="username" class="input-xlarge" readonly>-->
+									</div>
+                                    
+								</div>
+                                <div class="control-group">
+									<!--  Status -->
+									<div class="controls">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Status : 
+                                        <input type="text" id="status" name="status" value="User" readonly></h4></label>
+                                        
 									</div>
 								</div>
-								<div class="control-group">
-									<label class="control-label">Username</label>
+                                <div class="control-group">
+									<!--  Name -->
 									<div class="controls">
-										<input type="password" placeholder="Enter your password" id="password" class="input-xlarge">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Name : 
+                                        <input type="text" id="name" name="name" value="Sumate" readonly></h4></label>
+                                        
+									</div>
+								</div>
+                                <div class="control-group">
+									<!--  Surname  -->
+									<div class="controls">
+										<label class="control-label"><h4>
+                                            &nbsp;
+                                            Surname : 
+                                        <input type="text" id="sname" name="sname" value="Srithong" readonly></h4></label>
+                                        
+									</div>
+								</div>
+                                <div class="control-group">
+									<!--  Phone -->
+									<div class="controls">
+										<label class="control-label"><h4>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Phone : 
+                                        <input type="text" id="phone" name="phone" value="0882221150" readonly></h4></label>
+                                        
+									</div>
+								</div>
+                                <div class="control-group">
+									<!--  Email -->
+									<div class="controls">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Email : 
+                                        <input type="text" id="email" name="email" value="sumate@gmail.com" readonly></h4></label>
+                                        
+									</div>
+								</div>
+                                <div class="control-group">
+									<!--  Address -->
+									<div class="controls">
+										<label class="control-label" for="address"><h4>
+                                            &nbsp;&nbsp;
+                                            Address : 
+                                        <!--<input type="text" id="address" name="address" value="Prachinburi 77510" readonly>-->
+                                        <textarea id="address" name="address" rows="4" cols="50" readonly> Prachinburi 77510 </textarea></h4></label>
 									</div>
 								</div>
 								<div class="control-group">
@@ -104,8 +162,9 @@
 								</div>
 							</fieldset>
 						</form>				
-					</div>
-					<div class="span7">					
+					</div><!--
+					<div class="span7">	
+                         Right account		
 						<h4 class="title"><span class="text"><strong>Register</strong> Form</span></h4>
 						<form action="#" method="post" class="form-stacked">
 							<fieldset>
@@ -134,7 +193,7 @@
 								<div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
 							</fieldset>
 						</form>					
-					</div>				
+					</div>-->					
 				</div>
 			</section>			
 			<section id="footer-bar">
