--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -80,21 +80,13 @@
 			</section>			
 			<section class="main-content">				
 				<div class="row">
-					<div class="span12"> <!-- span 7-->
+					<div class="span5"> <!-- span 7-->
                         <!-- Left account -->					
 						<h4 class="title"><span class="text"><strong>Information</strong> Form</span></h4>
 						<form action="#" method="post" align="center">
 							<input type="hidden" name="next" value="/">
 							<fieldset>
-								<div class="control-group">
-									<!--  Username -->
-									<div class="controls">
-										<label class="control-label"><h4>Username : 
-                                        <input type="text" id="username" name="username" value="user123" readonly></h4></label>
-                                        <!--<input type="text" placeholder="Enter your username" id="username" class="input-xlarge" readonly>-->
-									</div>
-                                    
-								</div>
+								
                                 <div class="control-group">
 									<!--  Status -->
 									<div class="controls">
@@ -105,6 +97,7 @@
                                         
 									</div>
 								</div>
+                                
                                 <div class="control-group">
 									<!--  Name -->
 									<div class="controls">
@@ -156,44 +149,60 @@
 									</div>
 								</div>
 								<div class="control-group">
-									<input tabindex="3" class="btn btn-inverse large" type="submit" value="Sign into your account">
+									<input tabindex="3" class="btn btn-inverse large" type="submit" value="Edit Information">
 									<hr>
 									<p class="reset">Recover your <a tabindex="4" href="#" title="Recover your username or password">username or password</a></p>
 								</div>
 							</fieldset>
 						</form>				
-					</div><!--
-					<div class="span7">	
-                         Right account		
-						<h4 class="title"><span class="text"><strong>Register</strong> Form</span></h4>
+					</div>
+					<div class="span6">	
+                         <!--Right account-->		
+						<h4 class="title"><span class="text"><strong>Credits</strong> Form</span></h4>
 						<form action="#" method="post" class="form-stacked">
 							<fieldset>
 								<div class="control-group">
-									<label class="control-label">Username</label>
+									<!--  ID -->
 									<div class="controls">
-										<input type="text" placeholder="Enter your username" class="input-xlarge">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            ID : 
+                                        <input type="text" id="id" name="id" value="110100" readonly></h4></label>
+                                        
 									</div>
 								</div>
-								<div class="control-group">
-									<label class="control-label">Email address:</label>
+                                <div class="control-group">
+									<!--  Username -->
 									<div class="controls">
-										<input type="password" placeholder="Enter your email" class="input-xlarge">
+										<label class="control-label"><h4>Username : 
+                                        <input type="text" id="username" name="username" value="user123" readonly></h4></label>
+                                        <!--<input type="text" placeholder="Enter your username" id="username" class="input-xlarge" readonly>-->
 									</div>
+                                    
 								</div>
 								<div class="control-group">
-									<label class="control-label">Password:</label>
+									<!--  Credits -->
 									<div class="controls">
-										<input type="password" placeholder="Enter your password" class="input-xlarge">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Credits : 
+                                        <input type="text" id="credits" name="credits" value="10000" readonly>&nbsp; THB</h4></label>
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                        <input tabindex="9" class="btn btn-inverse large" type="submit" value="Top-Up Credits" align="center">
+                                        <!--<input type="text" placeholder="Enter your username" id="username" class="input-xlarge" readonly>-->
 									</div>
+                                    
 								</div>							                            
 								<div class="control-group">
-									<p>Now that we know who you are. I'm not a mistake! In a comic, you know how you can tell who the arch-villain's going to be?</p>
+									<p></p>
 								</div>
 								<hr>
-								<div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Create your account"></div>
+								<!--<div class="actions"><input tabindex="9" class="btn btn-inverse large" type="submit" value="Edit Information"></div>-->
 							</fieldset>
 						</form>					
-					</div>-->					
+					</div>				
 				</div>
 			</section>			
 			<section id="footer-bar">
