--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -86,6 +86,16 @@
 						<form action="#" method="post" align="center">
 							<input type="hidden" name="next" value="/">
 							<fieldset>
+								<div class="control-group">
+									<!--  Status -->
+									<div class="controls">
+										<label class="control-label"><h4>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Username : 
+                                        <input type="text" id="status" name="status" value="user123" readonly></h4></label>
+                                        
+									</div>
+								</div>
 								
                                 <div class="control-group">
 									<!--  Status -->
