--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -92,7 +92,7 @@
 										<label class="control-label"><h4>
                                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             Username : 
-                                        <input type="text" id="status" name="status" value="user123" readonly></h4></label>
+                                        <input type="text" id="username" name="username" value="user123" readonly></h4></label>
                                         
 									</div>
 								</div>
