--- a/templates/register.html
+++ b/templates/register.html
@@ -90,7 +90,7 @@
 									<label class="control-label"><h4>
 										
 										Username : 
-									<input type="text" id="status" name="status" value="" ></h4></label>
+									<input type="text" id="username" name="username" value="" ></h4></label>
 									
 								</div>
 								
@@ -100,7 +100,7 @@
 										<label class="control-label"><h4>
                                             &nbsp;
                                             Password : 
-                                        <input type="text" id="status" name="status" value="" ></h4></label>
+                                        <input type="text" id="password" name="password" value="" ></h4></label>
                                         
 									</div>
 								</div>
@@ -135,7 +135,7 @@
 									<label class="control-label"><h4>
 										
 										Username : 
-									<input type="text" id="status" name="status" value="" ></h4></label>
+									<input type="text" id="username" name="username" value="" ></h4></label>
 									
 								</div>
 								
@@ -145,7 +145,7 @@
 										<label class="control-label"><h4>
                                             &nbsp;
                                             Password : 
-                                        <input type="text" id="status" name="status" value="" ></h4></label>
+                                        <input type="text" id="password" name="password" value="" ></h4></label>
                                         
 									</div>
 								</div>
