--- a/templates/index.html
+++ b/templates/index.html
@@ -23,16 +23,20 @@
         <div class="span8">
           <div class="account pull-right">
             <ul class="user-menu">
-              <li>
+              
                 {% if Data != 0 %}
-                <a href="{{ url_for ('myaccount') }}">My Account</a>
+                <li><a href="{{ url_for ('check' , Data=Data) }}">My Account</a></li>
+                <li><a href="cart">Your Cart</a></li>
+                <li><a href="checkout">Checkout</a>
                 {% else %}
                 <a href="{{ url_for ('myaccount') }}" hidden>My Account</a>
                 {% endif %}
               </li>
-              <li><a href="cart">Your Cart</a></li>
-              <li><a href="checkout">Checkout</a></li>
+              {% if Data != 0 %}
+              <li><a href="{{ url_for ('register') }}" hidden>Login</a></li>
+              {% else %}
               <li><a href="{{ url_for ('register') }}">Login</a></li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -41,8 +45,11 @@
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
-          <a href="/" class="logo pull-left"
-            ><img
+          {% if Data != 0 %}
+          <a href="{{ url_for ('index' , Data=Data ) }}" class="logo pull-left"
+            >{% else %}
+            <a href="{{ url_for ('index' , Data=0 ) }}" class="logo pull-left"
+            >{% endif %}<img
               src="../static/themes/images/logo.png"
               class="site_logo"
               alt=""
@@ -123,26 +130,25 @@
                 </h4>
                 <div id="myCarousel" class="myCarousel carousel slide">
                   <div class="carousel-inner">
-                    <div class="active item">
-                      <ul class="thumbnails">
+                    {% for mydata in Name %}
                         <li class="span3">
                           <div class="product-box">
-                            <span class="sale_tag"></span>
                             <p>
-                              <a href="product_detail"
+                              <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}"
                                 ><img
-                                  src="../static/themes/images/skate/0_BoardDecks-Omakase_Palm.jpg"
+                                  src="../static/themes/images/skate/{{ IMG[loop.index - 1] }}"
                                   alt=""
                               /></a>
                             </p>
-                            <a href="product_detail" class="title"
-                              >Omakase Deck Palm</a
+                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}" class="title"
+                              >{{ mydata[0] }}</a
                             ><br />
-                            <a href="products.html" class="category">Loaded</a>
-                            <p class="price">6,390.00 ฿ THB</p>
+                            <a href="{{ url_for ('prod_detail' , DataP=Product[loop.index - 1], Data=Data ) }}" class="category">Loaded</a>
+                            <p class="price">{{Price[loop.index - 1]}} ฿ THB</p>
                           </div>
                         </li>
-                        <li class="span3">
+                        {% endfor %}
+                        <!-- <li class="span3">
                           <div class="product-box">
                             <span class="sale_tag"></span>
                             <p>
@@ -191,10 +197,7 @@
                             <p class="price">$31.45</p>
                           </div>
                         </li>
-                      </ul>
                     </div>
-                    <div class="item">
-                      <ul class="thumbnails">
                         <li class="span3">
                           <div class="product-box">
                             <p>
@@ -260,9 +263,7 @@
                             <a href="products" class="category">Quis nostrud</a>
                             <p class="price">$35.50</p>
                           </div>
-                        </li>
-                      </ul>
-                    </div>
+                        </li> -->
                   </div>
                 </div>
               </div>
