--- a/templates/myaccount.html
+++ b/templates/myaccount.html
@@ -22,10 +22,12 @@
         <div class="span8">
           <div class="account pull-right">
             <ul class="user-menu">
-              <li><a href="myaccount">My Account</a></li>
+              <li>
+                <a href="{{ url_for ('check' , Data=DataC[0]) }}">My Account</a>
+              </li>
               <li><a href="cart">Your Cart</a></li>
               <li><a href="checkout">Checkout</a></li>
-              <li><a href="register">Login</a></li>
+              <li><a href="register" hidden>Login</a></li>
             </ul>
           </div>
         </div>
@@ -34,7 +36,9 @@
     <div id="wrapper" class="container">
       <section class="navbar main-menu">
         <div class="navbar-inner main-menu">
-          <a href="/" class="logo pull-left"
+          <a
+            href="{{ url_for ('index' , Data=DataC[0]) }}"
+            class="logo pull-left"
             ><img
               src="../static/themes/images//logo.png"
               class="site_logo"
@@ -91,9 +95,22 @@
                   <div class="controls">
                     <label class="control-label"
                       ><h4>
+                        {% if loop.index == 1 %}
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ mydata[0] }} : {%
-                        if loop.index != 7 %} {% for Str in Data[loop.index - 1]
-                        %}
+                        elif loop.index == 2 %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ mydata[0]
+                        }} : {% elif loop.index == 3 %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{
+                        mydata[0] }} : {% elif loop.index == 4 %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ mydata[0]
+                        }} : {% elif loop.index == 5 %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{
+                        mydata[0] }} : {% elif loop.index == 6 %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{
+                        mydata[0] }} : {% else %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address
+                        : {% endif %} {% if loop.index != 7 %} {% for Str in
+                        Data[loop.index - 1] %}
                         <input
                           type="Username"
                           id="{{ mydata[0] }}"
@@ -255,16 +272,16 @@
             </h4>
             <form action="#" method="post" class="form-stacked">
               <fieldset>
+                {% for NE in DataC %}
                 <div class="control-group">
-                  <!--  ID -->{% for NE in DataC %}
+                  <!--  ID -->
                   <div class="controls">
                     <label class="control-label"
                       ><h4>
                         {% if loop.index == 1 %}
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        ID : {% elif loop.index == 2 %} Username : {% elif
-                        loop.index == 3 %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        Credits : {% endif %}
+                        ID : {% elif loop.index == 2 %} Username : {% else %}
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Credits : {% endif %}
                         <input
                           type="text"
                           id="id"
