--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -328,24 +328,19 @@
           <div class="span3 col">
             <div class="block">
               <ul class="nav nav-list">
-                <li class="nav-header">SUB CATEGORIES</li>
-                <li><a href="products.html">Nullam semper elementum</a></li>
-                <li class="active">
-                  <a href="products.html">Phasellus ultricies</a>
+                <li class="nav-header">
+                  <h4><strong>API</strong> COVID</h4>
                 </li>
-                <li><a href="products.html">Donec laoreet dui</a></li>
-                <li><a href="products.html">Nullam semper elementum</a></li>
-                <li><a href="products.html">Phasellus ultricies</a></li>
-                <li><a href="products.html">Donec laoreet dui</a></li>
+                <h4>
+                  <li>ติดเชื้อสะสม: {{ data[0] }}</li>
+                  <br />
+                  <li><font color="red">เพิ่มขึ้น </font>: {{ data[1] }}</li>
+                  <br />
+                  <li>รักษาหายแล้ว : {{ data[2] }}</li>
+                  <br />
+                </h4>
               </ul>
               <br />
-              <ul class="nav nav-list below">
-                <li class="nav-header">MANUFACTURES</li>
-                <li><a href="products.html">Adidas</a></li>
-                <li><a href="products.html">Nike</a></li>
-                <li><a href="products.html">Dunlop</a></li>
-                <li><a href="products.html">Yamaha</a></li>
-              </ul>
             </div>
             <div class="block">
               <h4 class="title">
