--- a/templates/index.html
+++ b/templates/index.html
@@ -279,168 +279,13 @@
                       ></span
                     ></span
                   >
-                  <span class="pull-right">
-                    <a
-                      class="left button"
-                      href="#myCarousel-2"
-                      data-slide="prev"
-                    ></a
-                    ><a
-                      class="right button"
-                      href="#myCarousel-2"
-                      data-slide="next"
-                    ></a>
-                  </span>
                 </h4>
-                <div id="myCarousel-2" class="myCarousel carousel slide">
-                  <div class="carousel-inner">
-                    <div class="active item">
-                      <ul class="thumbnails">
-                        <li class="span3">
-                          <div class="product-box">
-                            <span class="sale_tag"></span>
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware2.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Ut wisi enim ad</a
-                            ><br />
-                            <a href="products" class="category"
-                              >Commodo consequat</a
-                            >
-                            <p class="price">$25.50</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware1.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Quis nostrud exerci tation</a
-                            ><br />
-                            <a href="products" class="category">Quis nostrud</a>
-                            <p class="price">$17.55</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware6.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Know exactly turned</a
-                            ><br />
-                            <a href="products.html" class="category"
-                              >Quis nostrud</a
-                            >
-                            <p class="price">$25.30</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware5.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >You think fast</a
-                            ><br />
-                            <a href="products" class="category">World once</a>
-                            <p class="price">$25.60</p>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="item">
-                      <ul class="thumbnails">
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware4.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Know exactly</a
-                            ><br />
-                            <a href="products" class="category">Quis nostrud</a>
-                            <p class="price">$45.50</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware3.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Ut wisi enim ad</a
-                            ><br />
-                            <a href="products" class="category"
-                              >Commodo consequat</a
-                            >
-                            <p class="price">$33.50</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware2.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >You think water</a
-                            ><br />
-                            <a href="products" class="category">World once</a>
-                            <p class="price">$45.30</p>
-                          </div>
-                        </li>
-                        <li class="span3">
-                          <div class="product-box">
-                            <p>
-                              <a href="product_detail"
-                                ><img
-                                  src="../static/themes/images/cloth/bootstrap-women-ware1.jpg"
-                                  alt=""
-                              /></a>
-                            </p>
-                            <a href="product_detail" class="title"
-                              >Quis nostrud exerci</a
-                            ><br />
-                            <a href="products" class="category">Quis nostrud</a>
-                            <p class="price">$25.20</p>
-                          </div>
-                        </li>
-                      </ul>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <div class="container">
             <div class="row feature_box">
               <div class="span4">
                 <div class="service">
@@ -489,8 +334,10 @@
               </div>
             </div>
           </div>
+          </div>
         </div>
       </section>
+      <div class="container">
       <section class="our_client">
         <h4 class="title"><span class="text">Manufactures</span></h4>
         <div class="row">
@@ -573,6 +420,7 @@
       <section id="copyright">
         <span>Copyright 2013 bootstrappage template All right reserved.</span>
       </section>
+    </div>
     </div>
     <script src="../static/themes/js/common.js"></script>
     <script src="../static/themes/js/jquery.flexslider-min.js"></script>
